# passrs

./: Cargo.toml  NO-LICENSE  README.md  sxmo_passrs.sh
src/: main.rs  pass.rs  totp.rs  ui.rs
