[package]
name = "passwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
crypto = { version = "0.5.0", features = ["aead"] }
orion = "0.17.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
totp-lite = "2.0.0"
