[package]
name = "passrs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
crossterm = "0.26.1"
crypto = { version = "0.5.0", features = ["aead"] }
orion = "0.17.4"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
totp-rs = { version = "5.1.0", features = ["serde_support"] }
